src/objects/Int_Facility__c.object
<CustomObject>
    <description>Int Facility Object</description>
    <fields>
        <fullName>Commitence_Indicator__c</fullName>
        <description>Commitence Indicator</description>
        <label>Commitence Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Conversion_Factor__c</fullName>
        <description>Credit Conversion Factor</description>
        <label>Credit Conversion Factor</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Amount__c</fullName>
        <description>Credit Line Amount</description>
        <label>Credit Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency Code</description>
        <label>Currency Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Activation_Date__c</fullName>
        <description>Facility Activation Date</description>
        <label>Facility Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Deal_Date__c</fullName>
        <description>Facility Deal Date</description>
        <label>Facility Deal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Drawn_Amount__c</fullName>
        <description>Facility Drawn Amount</description>
        <label>Facility Drawn Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Maturity_Date__c</fullName>
        <description>Facility Maturity  Date</description>
        <label>Facility Maturity  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Notice_Period__c</fullName>
        <description>Facility Notice Period</description>
        <label>Facility Notice Period</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Notification_Date__c</fullName>
        <description>Facility Notification Date</description>
        <label>Facility Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Number__c</fullName>
        <description>Facility Number</description>
        <label>Facility Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Revolving_Indicator__c</fullName>
        <description>Facility Revolving Indicator</description>
        <label>Facility Revolving Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Source_System__c</fullName>
        <description>Source System for Facility</description>
        <label>Facility Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <description>Facility Type</description>
        <label>Facility Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hyperion_Base_Entity__c</fullName>
        <description>Hyperion Base Entity</description>
        <label>Hyperion Base Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Options_Code__c</fullName>
        <description>Maturity Options Code</description>
        <label>Maturity Options Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revocable_Indicator__c</fullName>
        <description>Revocable Indicator</description>
        <label>Revocable Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Int Facility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Fac-{0000000000}</displayFormat>
        <label>Facility Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>